crates/pawdoku/tests/snapshots/snapshots__tests__snapshot_the_reopening_refusals.snap
---
source: crates/pawdoku/tests/snapshots.rs
expression: picture
---
ReopenError (Display)
more moves undone than moves: the record's undone count, 3, exceeds its move count, 2
checks and no move: the record holds no move, and its check count is 2
givens the solver refuses: the record's givens open no board: the givens have more than one solution
a move the board refuses: move 7 of the record does not read back: the cell at row 1, column 1 holds a given
a move after the puzzle is solved: move 52 of the record comes after the puzzle is solved
moves undone on a solved puzzle: the record's moves solve the puzzle, and its undone count is 1
a check no board answers: check 2 of the record does not read back: the digit 10 is outside 1 to 9
a check asked after no move: check 4 of the record was asked after no move
