crates/pawdoku/tests/snapshots/snapshots__tests__snapshot_the_search_of_the_fixture.snap
---
source: crates/pawdoku/tests/snapshots.rs
expression: render_search(FIXTURE)
---
givens
53..7....
6..195...
.98....6.
8...6...3
4..8.3..1
7...2...6
.6....28.
...419..5
....8..79

verdict: OneSolution
guesses: 0

solution 1
534678912
672195348
198342567
859761423
426853791
713924856
961537284
287419635
345286179
